--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -25,9 +25,9 @@ add_library( # Sets the name of the library.
         SHARED
 
         # Provides a relative path to your source file(s).
-        libwavespeed.cpp
-        libswe.cpp
-        libswe1d.cpp
+        wavespeed.cpp
+        swe.cpp
+        swe1d.cpp
         ${SOURCES}
         )
 
